# solar_fit_test

./: README.md  eds_trend__power_hi.csv  main.py  pyproject.toml  utils.py
data/: 10_days.csv  1_day_timestamp_10s_a.csv  1_day_timestamp_3s.csv  eds_trend.csv  eds_trend__power.csv  eds_trend_a.csv  get_tabular_data.sh  get_tabular_data_rest.sh  high_sunshine_frequent_cover_1_day.csv  high_sunshine_frequent_cover_1_day_v2.csv  high_sunshine_frequent_cover_2_days.csv  high_sunshine_frequent_cover_3_days.csv  low_sunshine_1_day.csv  low_sunshine_1_day_v2.csv
data/calculated_data/high_sunshine_frequent_cover_1_day/: irr_dav_1_VALUE_sunny_periods.csv  poa_values.csv
data/calculated_data/high_sunshine_frequent_cover_1_day_v2/: irr_dav_1_VALUE_sunny_periods.csv  poa_values.csv
data/filtered/: 1_day_timestamp_3s.csv  high_sunshine_frequent_cover_1_day.csv  high_sunshine_frequent_cover_1_day_v2.csv
docs/: README.md
source/: analyze_calibration.rst  calibrate_methods.rst  conf.py  model_params.rst  plot_functions.rst  utils.rst
src/: analyze_calibration.py  calculate_parameters_based_on_reference_values.py  calibrate_methods.py  clear_sky_model.py  determine_azimuth_and_tilt.py  load_functions.py  main.py  model_params.py  plot_functions.py  plotting_functions.py  save_functions.py  sensor_calibration_metrics.py  utils.py
src/pvtools/: main.py
src/pvtools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/io_file/: test_writer.py
tests/preprocess/: test_preprocess_data.py
tests/solar_domain/: test_measurement_limitations.py
(+310 files in other folders)
